fix html links to images

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <div class="app_bar">
           <p>9:41</p>
           <ul class="icons_phone">
-            <li><img src="/icons/Cellular Connection.png" alt="Network Cell"></li>
-            <li><img src="/icons/Wifi.png" alt="wifi"></li>
-            <li><img src="/icons/Battery.png" alt="Battery"></li>
+            <li><img src="icons/Cellular Connection.png" alt="Network Cell"></li>
+            <li><img src="icons/Wifi.png" alt="wifi"></li>
+            <li><img src="icons/Battery.png" alt="Battery"></li>
           </ul>
         </div>        
         <nav class="menu_icon">
           <ul>
             <li>My Logo</li>
-            <li><img src="/icons/Union.png" height="12px" width="18px" alt="Menu"></li>
+            <li><img src="icons/Union.png" height="12px" width="18px" alt="Menu"></li>
           </ul>
         </nav>
       </section>
@@ -36,9 +36,9 @@
             to contact me. 
           </p>
           <ul>
-            <li><img src="/icons/Github.png" alt="Github Account"></li>
-            <li><img src="/icons/Linkedin.png" alt="Linkedin Account"></li>
-            <li><img src="/icons/Twitter.png" alt="Github Account"></li>
+            <li><img src="icons/Github.png" alt="Github Account"></li>
+            <li><img src="icons/Linkedin.png" alt="Linkedin Account"></li>
+            <li><img src="icons/Twitter.png" alt="Github Account"></li>
           </ul>
         </article>
       </section>
