--- a/index.html
+++ b/index.html
@@ -10,19 +10,15 @@
   </head>
   <body>
     <main class="top_Section">
-      <section class="header">
-        <div class="app_bar">
-          <p>9:41</p>
-          <ul class="icons_phone">
-            <li><img src="icons/Cellular Connection.png" alt="Network Cell"></li>
-            <li><img src="icons/Wifi.png" alt="wifi"></li>
-            <li><img src="icons/Battery.png" alt="Battery"></li>
-          </ul>
-        </div>        
+      <section class="header"> 
         <nav class="menu_icon">
           <ul>
-            <li>My Logo</li>
-            <li><img src="icons/Union.png" height="12px" width="18px" alt="Menu"></li>
+            <li><a href="index.html">My Logo</a></li>
+            <li>
+              <nav class="dropdown_menu">
+                <img src="icons/Union.png" height="12px" width="18px" alt="Menu">
+              </nav>
+            </li>
           </ul>
         </nav>
       </section>
@@ -36,9 +32,31 @@
             to contact me. 
           </p>
           <ul>
-            <li><img src="icons/Github.png" alt="Github Account"></li>
-            <li><img src="icons/Linkedin.png" alt="Linkedin Account"></li>
-            <li><img src="icons/Twitter.png" alt="Github Account"></li>
+            <li>
+              <a href="https://github.com/Kanyorok">
+                <span class="icon git"></span>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/robert-mbugua-a8745093/">
+                <span class="icon linked"></span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="icon angel"></span>
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/CarlosMbugua">
+                <span class="icon twitter"></span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="icon medium"></span>
+              </a>
+            </li>
           </ul>
         </article>
       </section>
