Add changes to revert

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
               <a href="#">RUBY</a>
             </li>
           </ul>
-          <button type="button" >See project</button>
+          <button type="button">
+            See project
+          </button>
         </article>
       </section>
 
