Add final changes to remove margin and fixed width HTML/CSS

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <body>
     <main class="top_Section">
+      
       <section class="header">
         <nav class="menu_icon">
           <ul>
@@ -35,7 +36,6 @@
       <section class="headline">
         <article class="intro">
           <h1 id="main_title">Hey There.<br />I'm Robert.</h1>
-          ;
           <h2 class="subtitle">I'm a Software Developer</h2>
           <p class="desc">
             I can help you build a product, feature or website. Look through
@@ -99,9 +99,7 @@
               <a href="#">RUBY</a>
             </li>
           </ul>
-          <button type="button">
-            See project
-          </button>
+          <button type="button">See project</button>
         </article>
       </section>
 
@@ -308,7 +306,7 @@
             </ul>
           </div>
         </article>
-      </section>
+		</section>
     </main>
   </body>
 </html>
