Add the float attribute to top buttons in portflio

--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
             since the 1500s, when an unknown printer took a standard dummy text.
           </p>
           <ul>
-            <li>
+            <li class="floated_left">
               <a href="#">CSS</a>
             </li>
-            <li>
+            <li class="floated_left">
               <a href="#">HTML</a>
             </li>
-            <li>
+            <li class="floated_left">
               <a href="#">BOOTSTRAP</a>
             </li>
-            <li>
+            <li class="floated_left">
               <a href="#">RUBY</a>
             </li>
           </ul>
