Add social icons to footer and required message length html/css

--- a/index.html
+++ b/index.html
@@ -341,7 +341,9 @@
             oninvalid="setCustomValidity('Please Enter Your Name to send message')" maxlength="30" />
           <input type="email" placeholder="Email address" required
             oninvalid="setCustomValidity('Please Enter a Valid Email Address')" />
-          <textarea rows="4" cols="50" placeholder="Write me something..."></textarea>
+          <textarea rows="4" cols="50" placeholder="Write me something..." maxlength="500" required
+          oninvalid="setCustomValidity('Please leave a message')"
+          ></textarea>
           <button type="submit">Get in touch</button>
         </form>
       </article>
@@ -355,22 +357,22 @@
           </li>
           <li>
             <a href="https://www.linkedin.com/in/robert-mbugua-a8745093/">
-              <span class="icon linked"></span>
+              <span class="icon linked_footer"></span>
             </a>
           </li>
           <li>
             <a href="#">
-              <span class="icon angel"></span>
+              <span class="icon angel_footer"></span>
             </a>
           </li>
           <li>
             <a href="https://twitter.com/CarlosMbugua">
-              <span class="icon twitter"></span>
+              <span class="icon twitter_footer"></span>
             </a>
           </li>
           <li>
             <a href="#">
-              <span class="icon medium"></span>
+              <span class="icon medium_footer"></span>
             </a>
           </li>
         </ul>
