Fix portfolio responsiveness desktop version HTML/CSS

--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
       <div class="grid_contentdesc">
         <section class="center_content">
           <article class="content_desc">
-            <h2>Profesional Art <br />Printing Data</h2>
+            <img src="icons/pro_sec.svg" alt="">
+            <div class="top_left1">
+              <h2>Data Dashboard<br/>Healthcare</h2>
             <p>
               A daily selection of privately personalized reads; no accounts or
               sign-ups required. Has been the industry's standard.
@@ -133,12 +135,15 @@
               </li>
             </ul>
             <button type="button">See project</button>
+          </div>
           </article>
         </section>
 
         <section class="center_content">
           <article class="content_desc">
-            <h2>Profesional Art <br />Printing Data</h2>
+            <img src="icons/Data_content_image.svg" alt="">
+            <div class="top_left">
+              <h2>Data Dashboard<br/>Healthcare</h2>
             <p>
               A daily selection of privately personalized reads; no accounts or
               sign-ups required. Has been the industry's standard.
@@ -155,12 +160,15 @@
               </li>
             </ul>
             <button type="button">See project</button>
+          </div>
           </article>
         </section>
 
         <section class="center_content">
           <article class="content_desc">
-            <h2>Profesional Art <br />Printing Data</h2>
+            <img src="icons/website.svg" alt="">
+            <div class="top_left">
+              <h2>Website Portfolio</h2>
             <p>
               A daily selection of privately personalized reads; no accounts or
               sign-ups required. Has been the industry's standard.
@@ -177,12 +185,15 @@
               </li>
             </ul>
             <button type="button">See project</button>
+          </div>
           </article>
         </section>
 
         <section class="center_content">
           <article class="content_desc">
-            <h2>Profesional Art <br />Printing Data</h2>
+            <img src="icons/professional.svg" alt="">
+            <div class="top_left">
+              <h2>Profesional Art <br />Printing Data</h2>
             <p>
               A daily selection of privately personalized reads; no accounts or
               sign-ups required. Has been the industry's standard.
@@ -199,12 +210,15 @@
               </li>
             </ul>
             <button type="button">See project</button>
+          </div>
           </article>
         </section>
 
         <section class="center_content">
           <article class="content_desc">
-            <h2>Profesional Art <br />Printing Data</h2>
+            <img src="icons/Data_content_image.svg" alt="">
+            <div class="top_left">
+              <h2>Data Dashboard<br/>Healthcare</h2>
             <p>
               A daily selection of privately personalized reads; no accounts or
               sign-ups required. Has been the industry's standard.
@@ -221,12 +235,15 @@
               </li>
             </ul>
             <button type="button">See project</button>
+          </div>
           </article>
         </section>
 
         <section class="center_content">
           <article class="content_desc">
-            <h2>Profesional Art <br />Printing Data</h2>
+            <img src="icons/website.svg" alt="">
+            <div class="top_left">
+              <h2>Website Portfolio</h2>
             <p>
               A daily selection of privately personalized reads; no accounts or
               sign-ups required. Has been the industry's standard.
@@ -243,6 +260,7 @@
               </li>
             </ul>
             <button type="button">See project</button>
+          </div>
           </article>
         </section>
       </div>
