Fix styling for html desktop version HTML/CSS

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </section>
 
       <section class="headline">
-        <article class="intro">
+        <section class="intro">
           <div class="first_intro_column">
             <h1 class="main_title">Hey There.<br />I'm Robert.</h1>
             <h2 class="subtitle">I'm a Software Developer</h2>
@@ -71,18 +71,18 @@
               </li>
             </ul>
           </div>
-        </article>
+        </section>
         <div class="image_show">
           <img src="icons/Illustration-header.svg" alt="back" />
         </div>
       </section>
 
       <section class="works">
-        <header class="works_title">
+        <h2 class="works_title">
           <span> My Recent Works </span>
           <hr />
-        </header>
-        <article class="works_content">
+        </h2>
+        <section class="works_content">
           <div class="image_placement">
             <img src="icons/Works_cont.svg" alt="The Banner" />
           </div>
@@ -110,12 +110,12 @@
             </ul>
             <button type="button">See project</button>
           </div>
-        </article>
+        </section>
       </section>
 
       <div class="grid_contentdesc">
         <section class="center_content">
-          <article class="content_desc">
+          <section class="content_desc">
             <img src="icons/pro_sec.svg" alt="">
             <div class="top_left1">
               <h2>Data Dashboard<br/>Healthcare</h2>
@@ -136,11 +136,11 @@
             </ul>
             <button type="button">See project</button>
           </div>
-          </article>
+          </section>
         </section>
 
         <section class="center_content">
-          <article class="content_desc">
+          <section class="content_desc">
             <img src="icons/Data_content_image.svg" alt="">
             <div class="top_left">
               <h2>Data Dashboard<br/>Healthcare</h2>
@@ -161,11 +161,11 @@
             </ul>
             <button type="button">See project</button>
           </div>
-          </article>
+          </section>
         </section>
 
         <section class="center_content">
-          <article class="content_desc">
+          <section class="content_desc">
             <img src="icons/website.svg" alt="">
             <div class="top_left">
               <h2>Website Portfolio</h2>
@@ -186,11 +186,11 @@
             </ul>
             <button type="button">See project</button>
           </div>
-          </article>
+          </section>
         </section>
 
         <section class="center_content">
-          <article class="content_desc">
+          <section class="content_desc">
             <img src="icons/professional.svg" alt="">
             <div class="top_left">
               <h2>Profesional Art <br />Printing Data</h2>
@@ -211,11 +211,11 @@
             </ul>
             <button type="button">See project</button>
           </div>
-          </article>
+          </section>
         </section>
 
         <section class="center_content">
-          <article class="content_desc">
+          <section class="content_desc">
             <img src="icons/Data_content_image.svg" alt="">
             <div class="top_left">
               <h2>Data Dashboard<br/>Healthcare</h2>
@@ -236,11 +236,11 @@
             </ul>
             <button type="button">See project</button>
           </div>
-          </article>
+          </section>
         </section>
 
         <section class="center_content">
-          <article class="content_desc">
+          <section class="content_desc">
             <img src="icons/website.svg" alt="">
             <div class="top_left">
               <h2>Website Portfolio</h2>
@@ -261,12 +261,12 @@
             </ul>
             <button type="button">See project</button>
           </div>
-          </article>
+          </section>
         </section>
       </div>
 
       <section class="about">
-        <article class="about_content">
+        <section class="about_content">
           <div class="about_header">
             <div class="about_header_content">
               <h2>About Me</h2>
@@ -340,11 +340,11 @@
               </li>
             </ul>
           </div>
-        </article>
+        </section>
       </section>
 
       <section class="contact">
-        <article class="contact_content">
+        <section class="contact_content">
           <p>
             I'm always interested in hearing about new projects, so if you'd
             like to chat please get in touch.
@@ -379,7 +379,7 @@
               <button type="submit">Get in touch</button>
             </div>
           </form>
-        </article>
+        </section>
         <hr />
         <div class="footer_icons">
           <ul>
