Fix the responsive sizing of the site.

--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
           <hr />
         </h2>
         <section class="works_content">
-          <div class="image_placement">
-            <img src="icons/Works_cont.svg" alt="The Banner" />
-          </div>
+            <img src="icons/Works_cont.svg" class="image_placement" alt="The Banner" />
           <div class="text_placement">
             <h2>Multi-Post Stories</h2>
             <p>
