add fontsize & margin to menu anchors

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
           </div>
         </nav>
         <div id="top_navigation">
-          <a href="">Portfolio</a><br>
-          <a href="">About</a><br>
-          <a href="">Contact</a><br>
+          <a href="">Portfolio</a><br><hr>
+          <a href="">About</a><br><hr>
+          <a href="">Contact</a><br><hr>
         </div>
       </section>
 
