Fix any options of the mobile menu, the mobile menu should disappear

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
           </div>
         </nav>
         <div id="top_navigation">
-          <a href="#portfolio_section">Portfolio</a><br><hr>
-          <a href="#about">About</a><br><hr>
-          <a href="#contact">Contact</a><br><hr>
+          <a href="#portfolio_section" onclick="mobileMenu()">Portfolio</a><br><hr>
+          <a href="#about" onclick="mobileMenu()">About</a><br><hr>
+          <a href="#contact" onclick="mobileMenu()"">Contact</a><br><hr>
         </div>
       </section>
       <div class="for_mobile">
