--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
   <body>
     <main class="top_Section">
-      
       <section class="header">
+        
         <nav class="menu_icon">
           <h2><a href="index.html">My Logo</a></h2>
           <nav class="dropdown_menu">
@@ -117,7 +117,7 @@
                   <a href="#">RUBY</a>
                 </li>
               </ul>
-              <button type="button">See project</button>
+              <button id="projectOne" onclick="clickedButton(this.id)" type="button">See project</button>
             </div>
           </section>
         </section>
@@ -143,7 +143,7 @@
                     <a href="#">RUBY</a>
                   </li>
                 </ul>
-                <button type="button">See project</button>
+                <button id="projectTwo" onclick="clickedButton(this.id)" type="button">See project</button>
               </div>
             </section>
           </section>
@@ -168,7 +168,7 @@
                     <a href="#">RUBY</a>
                   </li>
                 </ul>
-                <button type="button">See project</button>
+                <button id="projectThree" onclick="clickedButton(this.id)" type="button">See project</button>
               </div>
             </section>
           </section>
@@ -193,7 +193,7 @@
                     <a href="#">RUBY</a>
                   </li>
                 </ul>
-                <button type="button">See project</button>
+                <button id="projectFour" onclick="clickedButton(this.id)" type="button">See project</button>
               </div>
             </section>
           </section>
@@ -218,7 +218,7 @@
                     <a href="#">RUBY</a>
                   </li>
                 </ul>
-                <button type="button">See project</button>
+                <button id="projectFive" onclick="clickedButton(this.id)" type="button">See project</button>
               </div>
             </section>
           </section>
@@ -243,7 +243,7 @@
                     <a href="#">RUBY</a>
                   </li>
                 </ul>
-                <button type="button">See project</button>
+                <button id="projectSix" type="button">See project</button>
               </div>
             </section>
           </section>
@@ -268,10 +268,38 @@
                     <a href="#">RUBY</a>
                   </li>
                 </ul>
-                <button type="button">See project</button>
+                <button id="projectSeven" onclick="clickedButton(this.id)" type="button">See project</button>
               </div>
             </section>
           </section>
+          <!--Popup section-->
+          <div class="popup">
+            <div class="popup_content">
+              <div class="titleContent">
+                <h1 id="headingSection">Multi-Post</h1>
+                <img src="icons/close.svg" alt="">
+              </div>
+              <ul>
+                <li>
+                  <a href="#">CSS</a>
+                </li>
+                <li>
+                  <a href="#">HTML</a>
+                </li>
+                <li>
+                  <a href="#">BOOTSTRAP</a>
+                </li>
+                <li>
+                  <a href="#">RUBY</a>
+                </li>
+              </ul>
+              <div class="popup_info">
+                <img src="icons/Snapshoot Portfolio.jpg" alt="Portfolio">
+                <p id="projectDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent</p>
+              </div>
+
+            </div>
+          </div>
         </div>
   
         <section id="about" class="about">
