--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             I'm always interested in hearing about new projects, so if you'd
             like to chat please get in touch.
           </p>
-          <form action="https://formspree.io/f/xgebdydo" method="post" class="contact_form">
+          <form action="https://formspree.io/f/xgebdydo" method="post" id="form" class="contact_form">
             <input name="FullName" type="text" placeholder="Full name" required maxlength="30" />
             <input name="Email" type="email" placeholder="Email address" required />
             <textarea name="Message" rows="4" cols="50" placeholder="Write me something..." maxlength="500"
