--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
             like to chat please get in touch.
           </p>
           <form action="https://formspree.io/f/xgebdydo" method="post" id="form" class="contact_form">
-            <input name="FullName" type="text" placeholder="Full name" required maxlength="30" />
+            <!-- <input name="FullName" type="text" placeholder="Full name" required maxlength="30" /> -->
             <input name="Email" type="email" placeholder="Email address" required />
-            <textarea name="Message" rows="4" cols="50" placeholder="Write me something..." maxlength="500"
-              required></textarea>
-            <div class="centered_button">
-              <button type="submit">Get in touch</button>
+            <!-- <textarea name="Message" rows="4" cols="50" placeholder="Write me something..." maxlength="500"
+              required></textarea> -->
+            <div class="centered_button" id="form-btn-container">
+              <button id="form_btn" type="submit">Get in touch</button>
             </div>
           </form>
         </section>
