Add the Wellfound public profile link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <hr>
         <a href="#about" onclick="mobileMenu()">About</a><br>
         <hr>
-        <a href="#contact" onclick="mobileMenu()"">Contact<br></a><hr>
+        <a href="#contact" onclick="mobileMenu()">Contact<br></a><hr>
         </div>
       </section>
       <div class=" for_mobile">
@@ -66,7 +66,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="#">
+                    <a href="https://wellfound.com/u/robert-mbugua">
                       <span class="icon angel"></span>
                     </a>
                   </li>
@@ -191,7 +191,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="https://wellfound.com/u/robert-mbugua">
                 <span class="icon angel_footer"></span>
               </a>
             </li>
