--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p class="desc">
                   I can help you build a product, feature or website. Look through
                   some of my work and experience! if you like what you see and have
-                  a project you need coded, don't hesitate to contact me.
+                  a project you need coded, don't hesitate to contact me email: robertmbugua.kanyoro@gmail.com.
                 </p>
               </div>
               <div class="second_intro_column">
@@ -66,7 +66,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="#">
+                    <a href="https://wellfound.com/u/robert-mbugua">
                       <span class="icon angel"></span>
                     </a>
                   </li>
@@ -191,7 +191,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="https://wellfound.com/u/robert-mbugua">
                 <span class="icon angel_footer"></span>
               </a>
             </li>
