Add the data for the portfolio

--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@
                 <h1 class="main_title">Hey There.<br />I'm Robert.</h1>
                 <h2 class="subtitle">I'm a Software Developer</h2>
                 <p class="desc">
-                  I can help you build a product, feature or website. Look through
-                  some of my work and experience! if you like what you see and have
-                  a project you need coded, don't hesitate to contact me.
+                  Coming from a background of creating effective software solutions for a diverse global clientele, 
+                  I bring with me over <b>1300</b>hours of hands-on experience. This includes successfully guiding and 
+                  mentoring over 10 junior developers towards accomplishing specific objectives within tight deadlines. 
+                  My expertise encompasses a wide range of technologies, including 
+                  <i>React, Redux, JavaScript, Ruby on Rails, Figma,medium fidelity, and Laravel</i>, 
+                  demonstrating a versatile skill set that enables me to tackle various challenges effectively.
                 </p>
               </div>
               <div class="second_intro_column">
@@ -76,7 +79,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="#">
+                    <a href="https://medium.com/@rmjesusaddict">
                       <span class="icon medium"></span>
                     </a>
                   </li>
@@ -104,10 +107,13 @@
             <div class="about_header_content">
               <h2>About Me</h2>
               <p>
-                Hello I’m a software developer! I can help you build a product,
-                feature or website Look through some of my work and experience!
-                If you like what you see and have a project you need coded,
-                don’t hesitate to contact me.
+                I am a full-stack software engineer specializing in front-end and back-end 
+                web development. With expertise in HTML, CSS, JavaScript, React, and Redux, I craft intuitive and 
+                engaging user interfaces that bring digital experiences to life. I have successfully built and 
+                maintained 88 professional program repositories in a period of three months on GitHub, a 
+                personal accomplishment that fills me with pride. Engaged in remote work for the past several months, 
+                I have had the opportunity to collaborate with talented programmers from diverse geographical locations, 
+                transcending time zones and working asynchronously. 
               </p>
               <button type="button">Get my resume</button>
             </div>
