Add the styling and data for banner

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           <section class="headline">
             <section class="intro">
               <div class="first_intro_column">
-                <h1 class="main_title">Hey There.<br />I'm Robert.</h1>
-                <h2 class="subtitle">I'm a Software Developer</h2>
+                <h1 class="main_title">Hey There.<br />I'm Robert Kanyoro.</h1>
+                <h2 class="subtitle">I'm a Full Stack Software Developer</h2>
                 <p class="desc">
                   Coming from a background of creating effective software solutions for a diverse global clientele, 
                   I bring with me over <b>1300</b>hours of hands-on experience. This includes successfully guiding and 
